--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon.png" />
-   
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Chatbook</title>
@@ -18,6 +22,5 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
   </body>
 </html>
